--- a/contact.html
+++ b/contact.html
@@ -175,13 +175,16 @@
             <h3 class="fw-bold mb-4">Find Us on the Map</h3>
             <div class="map-wrapper">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.2684490040457!2d78.11953431479065!3d9.925201292879744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b00c5f24bacbf11%3A0x740f4d7bba89e92d!2sMadurai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin"
+                src="https://www.google.com/maps?q=Winners+Health+On,+Plot+no+38,+Shanthi+Nagar+1st+Street,+Madurai,+Tamil+Nadu+625018&output=embed"
                 style="border:0; width:100%; height:400px; border-radius: var(--radius-xl);"
                 allowfullscreen
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
-                title="Winners Health On Location - Madurai, Tamil Nadu">
+                title="Winners Health On Location - Shanthi Nagar, Madurai">
               </iframe>
+              <div class="mt-2 text-end">
+                <a href="https://maps.app.goo.gl/eEJRvAsx8FqedLdQ8" target="_blank" rel="noopener noreferrer" class="small">Open in Google Maps</a>
+              </div>
             </div>
             <div class="mt-4 p-4 rounded-3" style="background: var(--color-gray-50);">
               <h6 class="fw-semibold mb-2"><i class="bi bi-info-circle me-2" style="color: var(--color-primary);"></i>Visiting Information</h6>
